refactor: restructure project files and update configurations
    Deleted Eclipse settings files and build.cmd.
    Renamed mailSettingsTest.ini to resources/config/mailSettingsTest.ini.
    Added several IntelliJ IDEA configuration files.
    Implemented and updated multiple methods in EmailConfigObject.
    Added unit tests for EmailConfigObject functionalities.
    Updated .gitignore to include IntelliJ IDEA files.
    Introduced lombok.Data annotation for EmailConfigObject.