@@ -1,53 +1,42 @@
-<?xml version="1.0"?>
-<project
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-	xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>rentasad.library.basicTools.emailSendTool</artifactId>
-	<name>gustini.library.basicTools.emailSendTool</name>
-	<url>http://maven.apache.org</url>
+	<groupId>rentasad.library</groupId>
+	<version>3.0.0</version>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<!--  UNIT-TESTS beim BUILD deaktivieren -->
-		<skipTests>true</skipTests>
+		<project.java.version>17</project.java.version>
+		<maven.compiler.source>${project.java.version}</maven.compiler.source>
+		<maven.compiler.target>${project.java.version}</maven.compiler.target>
+		<!-- DEPENDENCIES VERSIONS -->
+		<maven-clean-plugin>3.2.0</maven-clean-plugin>
+		<maven-resources-plugin>3.3.1</maven-resources-plugin>
+		<maven-compiler-plugin>3.11.0</maven-compiler-plugin>
+		<maven-surefire-plugin>3.1.2</maven-surefire-plugin>
+		<maven-jar-plugin>3.3.0</maven-jar-plugin>
+		<maven-install-plugin>3.1.1</maven-install-plugin>
+		<maven-deploy-plugin>3.1.1</maven-deploy-plugin>
+		<maven-site-plugin>3.12.1</maven-site-plugin>
+		<mavenProjectInfoReportsPlugin>3.1.2</mavenProjectInfoReportsPlugin>
+		<maven-project-info-reports-plugin>3.4.5</maven-project-info-reports-plugin>
 	</properties>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
-				<configuration>
-					<release>11</release>
-				</configuration>
-			</plugin>
-			<!-- The Maven-Surefire-Plugin is needed to make Unittests while building -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.2</version>
-				<configuration>
-					<argLine>
-						--enable-preview
-					</argLine>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+
 	<dependencies>
-		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-api</artifactId>
-			<version>5.2.0</version>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>5.9.0</version>
 			<scope>test</scope>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.ini4j/ini4j -->
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
 		<dependency>
-			<groupId>org.ini4j</groupId>
-			<artifactId>ini4j</artifactId>
-			<version>0.5.4</version>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.34</version>
+			<scope>provided</scope>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-email -->
 		<dependency>
@@ -55,30 +44,96 @@
 			<artifactId>commons-email</artifactId>
 			<version>1.5</version>
 		</dependency>
-
 		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-			<version>3.7</version>
+			<version>3.12.0</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.sun.mail</groupId>
 			<artifactId>javax.mail</artifactId>
-			<version>1.6.2</version>
+			<version>1.5.6</version>
+		</dependency>
+		<!--
+		******************************************
+		*    Dependencies for Submodules         *
+		******************************************
+
+		******************************************
+		*    Submodule ConfigFileTool            *
+		******************************************
+		-->
+		<!-- https://mvnrepository.com/artifact/org.ini4j/ini4j HANDLING INI-FILE
+    READ- AND WRITE -->
+		<dependency>
+			<groupId>org.ini4j</groupId>
+			<artifactId>ini4j</artifactId>
+			<version>0.5.4</version>
 		</dependency>
 		<dependency>
-			<groupId>rentasad</groupId>
-			<artifactId>rentasad.library.basicTools</artifactId>
-			<version>1.1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>rentasad</groupId>
-			<artifactId>rentasad.library.configFileTool</artifactId>
-			<version>1.1.0</version>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.17.0</version>
 		</dependency>
 	</dependencies>
-	<groupId>rentasad</groupId>
-	<version>1.1.0</version>
+
+	<build>
+		<pluginManagement><!-- lock down plugins versions to avoid using Maven 
+				defaults (may be moved to parent pom) -->
+			<plugins>
+				<!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
+				<plugin>
+					<artifactId>maven-clean-plugin</artifactId>
+					<version>${maven-clean-plugin}</version>
+				</plugin>
+				<!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
+				<plugin>
+					<artifactId>maven-resources-plugin</artifactId>
+					<version>${maven-resources-plugin}</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>${maven-compiler-plugin}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>${maven-surefire-plugin}</version>
+					<configuration>
+<!--						<source>17</source>-->
+<!--						<target>17</target>-->
+						<additionalSourceDirectories>
+							<additionalSourceDirectory>submodules/rentasad.library.basicTools.configFileTool/src/main/java</additionalSourceDirectory>
+							<additionalSourceDirectory>submodules/rentasad.library.basicTools.stringTools/src/main/java</additionalSourceDirectory>
+						</additionalSourceDirectories>
+					</configuration>
+
+
+
+				</plugin>
+				<plugin>
+					<artifactId>maven-jar-plugin</artifactId>
+					<version>${maven-jar-plugin}</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-install-plugin</artifactId>
+					<version>${maven-install-plugin}</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-deploy-plugin</artifactId>
+					<version>${maven-deploy-plugin}</version>
+				</plugin>
+				<!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
+				<plugin>
+					<artifactId>maven-site-plugin</artifactId>
+					<version>${maven-site-plugin}</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-project-info-reports-plugin</artifactId>
+					<version>${maven-project-info-reports-plugin}</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 </project>
